--- a/view/password.html
+++ b/view/password.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
 <title>Diplomások</title>
 <h1 class = "cim"> DiplomaKözpont </h1>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/pass.css">
   </head>
   <body>
     <div class="csomag">
@@ -19,12 +19,17 @@ Jelszó Emlékesztető</div>
 
 
 <div class="field">
-          <input type="submit" value="Új jelszó Beállítása">
+          <input type="submit" onclick="send()" value="Új jelszó Beállítása">
         </div>
 
 </form>
 </div>
-
+<Script>
+  function send(){
+    //alert("Az üzenet elküldve az adminnak");
+    alert("Az üzenet elküldve az adminnak");
+  }
+</Script>
 
 </body>
 </html>
