login and forgot fix

--- a/view/password.html
+++ b/view/password.html
@@ -12,14 +12,15 @@
 Jelszó Emlékesztető</div>
 
 
-<form action="#">
+<form action="../controller/forgot.php" method="POST">
         <div class="field">
-          <input type="text" name="text"required placeholder="Neptun Kód">
+          <input type="text" id="neptun" name="neptun" required placeholder="Neptun Kód">
         </div>
 
 
 <div class="field">
-          <input type="submit" onclick="send()" value="Új jelszó Beállítása">
+        <button type="submit" value="Submit">Új jelszó Beállításas</button>
+
         </div>
 
 </form>
