--- a/view/index.html
+++ b/view/index.html
@@ -10,12 +10,12 @@
     <div class="csomag">
       <div class="title">
 Bejelentkezés</div>
-<form action="#">
+<form action="../controller/login.php" method="POST">
         <div class="field">
-          <input type="text" required placeholder="Neptun kód">
+          <input type="text" required id="neptun" name="neptun" placeholder="Neptun kód">
         </div>
 <div class="field">
-          <input type="password" required placeholder="Jelszó">
+          <input type="password" id="password" name="password" required placeholder="Jelszó">
         </div>
 <div class="content">
           <div class="checkbox">
@@ -26,7 +26,7 @@ Bejelentkezés</div>
 <a href="password.html">Elfelejtetted a jelszót?</a></div>
 </div>
 <div class="field">
-          <input type="submit" value="Belépés">
+    <button type="submit" value="Submit">Bejelentkezés</button>
         </div>
 
 </form>
