--- a/view/sidebar.html
+++ b/view/sidebar.html
@@ -6,7 +6,7 @@
 <body>
 
 <!-- Sidebar -->
-<div class="w3-sidebar w3-light-grey w3-bar-block" style="width:25%">
+<div class="w3-sidebar w3-light-grey w3-bar-block">
   <h3 class="w3-bar-item">Menu</h3>
   <a href="#" class="w3-bar-item w3-button">Link 1</a>
   <a href="#" class="w3-bar-item w3-button">Link 2</a>
@@ -14,20 +14,7 @@
 </div>
 
 <!-- Page Content -->
-<div style="margin-left:25%">
 
-<div class="w3-container w3-teal">
-  <h1>My Page</h1>
-</div>
-
-
-<div class="w3-container">
-<h2>Sidebar Navigation Example</h2>
-<p>The sidebar with is set with "style="width:25%".</p>
-<p>The left margin of the page content is set to the same value.</p>
-</div>
-
-</div>
       
 </body>
 </html>
