sok minden alakítása
főoldal, header, sidebar , regform

--- a/view/regform.html
+++ b/view/regform.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
 <title>Diplomások</title>
 <h1 class = "cim"> DiplomaKözpont </h1>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/uploader.css">
   </head>
   <body>
     <div class="csomag">
