--- a/view/sidebar.html
+++ b/view/sidebar.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS</title>
+
 <meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body>
 
 <!-- Sidebar -->
 <div class="w3-sidebar w3-light-grey w3-bar-block">
-  <h3 class="w3-bar-item">Menu</h3>
-  <a href="#" class="w3-bar-item w3-button">Link 1</a>
-  <a href="#" class="w3-bar-item w3-button">Link 2</a>
-  <a href="#" class="w3-bar-item w3-button">Link 3</a>
+  <h3 class="w3-bar-item">Főmenü</h3>
+  <a href="#" class="w3-bar-item w3-button">Rendezés</a>
+  <a href="#" class="w3-bar-item w3-button">Kategória</a>
+  <a href="#" class="w3-bar-item w3-button">Egyéb</a>
 </div>
-
-<!-- Page Content -->
 
       
 </body>
