forgot.css átalakítás
pass.css ->  forgot.css
gombok javítása

--- a/view/password.html
+++ b/view/password.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
 <title>Diplomások</title>
 <h1 class = "cim"> DiplomaKözpont </h1>
-    <link rel="stylesheet" href="css/pass.css">
+    <link rel="stylesheet" href="css/forgot.css">
   </head>
   <body>
     <div class="csomag">
@@ -18,8 +18,8 @@ Jelszó Emlékesztető</div>
         </div>
 
 
-<div class="field">
-        <button type="submit" value="Submit">Új jelszó Beállításas</button>
+<div>
+        <button class="btn" type="submit" value="Submit">Új jelszó Beállításas</button>
 
         </div>
 
@@ -27,7 +27,6 @@ Jelszó Emlékesztető</div>
 </div>
 <Script>
   function send(){
-    //alert("Az üzenet elküldve az adminnak");
     alert("Az üzenet elküldve az adminnak");
   }
 </Script>
