--- a/view/css/forgot.css
+++ b/view/css/forgot.css
@@ -27,15 +27,15 @@ h1{
   user-select: none;
   border-radius: 15px 15px 15px 15px;
   background:  #401b58;
-  margin-top: -250px;
+  margin-top: -30px;
 }
 .csomag{
   height: 300px;
   width: 480px;
   background: rgb(253, 222, 137);
   border-radius: 20px;
-  box-shadow: 100px 15px 20px rgba(0, 0, 0, 0.315);
-  margin-top: -300px;
+  box-shadow: 0px 15px 20px rgba(0,0,0,0.1);
+  margin-top: -50px;
   margin-left: 500px;
 }
 .csomag .title{ 
@@ -53,7 +53,7 @@ h1{
   padding: 10px 30px 50px 30px;
 }
 .csomag form .field{
-  height: 70px;
+  height: 50px;
   width: 100%;
   margin-top: 20px;
   position: 50%;
@@ -84,43 +84,22 @@ form .content .checkbox{
 }
 
 .btn{
-  height: 50px;
-  width: 100%;
-  margin-top: 20px;
-  position: 50%;
-  background-color:  #401b58;
-  border-radius: 12px;
+  background-color: #401b58;
+  border: none;
   color: white;
-  font-size: 20px;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  border-radius: 25px;
+  font-size: 16px;
+  margin-left: 90px;
+  margin-top: 40px;
+
 }
 
-form .field input[type="submit"]{
-  color: rgb(253, 222, 137);
-  border: none;
-  padding-left: 0;
-  margin-top: 0px;
-  font-size: 20px;
-  font-weight: 500;
-  cursor: pointer;
-  background: #401b58;
-  transition: all 0.3s ease;
-}
-form .field input[type="submit"]:active{
-  transform: scale(0.95);
-}
-form .signup-link{
-  color: #262626;
-  margin-top: 20px;
-  text-align: center;
-}
-form .pass-link a,
-form .signup-link a{
-  color: #4158d0;
-  text-decoration: none;
-}
-form .pass-link a:hover,
-form .signup-link a:hover{
-  text-decoration: underline;
+select{
+  font-size:12px;
 }
 
 
