--- a/view/css/style.css
+++ b/view/css/style.css
@@ -84,14 +84,18 @@ form .content .checkbox{
 }
 
 .btn{
-  height: 50px;
-  width: 100%;
-  margin-top: 20px;
-  position: 50%;
-  background-color:  #401b58;
-  border-radius: 12px;
+  width:300px;
+  background-color: #401b58;
+  border: none;
   color: white;
-  font-size: 20px;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  border-radius: 25px;
+  font-size: 16px;
+  margin-left: 60px;
+  margin-top: 40px;
 }
 
 select{
