--- a/view/index.html
+++ b/view/index.html
@@ -25,8 +25,8 @@ Bejelentkezés</div>
 <div class="pass-link">
 <a href="password.html">Elfelejtetted a jelszót?</a></div>
 </div>
-<div class="field">
-    <button type="submit" value="Submit">Bejelentkezés</button>
+<div>
+    <button class="btn" type="submit" value="Submit">Bejelentkezés</button>
         </div>
 
 </form>
