--- a/view/css/uploader.css
+++ b/view/css/uploader.css
@@ -15,7 +15,6 @@ body {
 	bottom: auto;
 	width: auto;
 	height: auto;
-	background-image: url("../img/869.jpg");
 	background-size: cover;
 	z-index: 0;
 }
@@ -105,15 +104,9 @@ label{
 .progress{
   background-color: #82CFFA;height:10px;
 }
-footer{
-  font-size:11px; color:#bbbbc5; padding:4em 0 0;text-align: left;
-}
-footer a, footer a:visited {
-  color:#bbbbc5;
-}
 
 #breadcrumb{ 
-  padding-top:60px; font-size:15px; color:#aaa;display:inline-block;float:left;
+  padding-top:60px; font-size:15px; color:#aaa;display:inline-block;
 }
 
 #folder_actions{
