--- a/view/css/reg.css
+++ b/view/css/reg.css
@@ -37,7 +37,7 @@ body{
     height: 50px;
     width: 100%;
     margin-top: 20px;
-    position: 50%;
+
     
     
   }
@@ -66,11 +66,10 @@ body{
   }
 
   .select {
-    position: fixed;
+    margin-left: 80px;
     font-family: Arial;
     background-color: rgb(255, 220, 163);
     top: 445px;
-    right: 330px;
     width: 160px;
     height: 40px;
     border-radius: 20px;
