--- a/view/css/reg.css
+++ b/view/css/reg.css
@@ -3,7 +3,7 @@ body{
 	background: #fff;
     background-image: url("../img/szines.png");
     background-repeat: no-repeat;
-    background-position: 30% 65%;
+    background-position: 100px;
 	color: rgb(255, 233, 198);
 	font-family: Arial;
 	font-size: 20px;
