--- a/view/css/uploader.css
+++ b/view/css/uploader.css
@@ -1,5 +1,36 @@
 @import url(https://fonts.googleapis.com/css?family=Exo:100,200,400);
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:700,400,300);
+.button{
+	left: 0px;
+	color: white;
+	margin-top: 3px;
+	background-color: 401b58;
+	border-width: none;
+    border-radius: 30px 30px 30px 30px;
+	width: 180px;
+	background-color: #401b58;
+  	padding: 14px 25px;
+  	text-align: center;
+  	text-decoration: none;
+  	display: inline-block;
+
+}
+#table {
+	width:100%;
+	border:2px solid black;
+    margin-top: 50px;
+    margin-left:20px;
+  background-color: white;
+}
+td {
+    border:2px solid black;
+    text-align: center;
+}
+
+
+
+
+
 
 body {
 	margin: 0;
@@ -45,23 +76,9 @@ a {
 }
 
 
-th {
-  font-weight: normal; color: #1F75CC; background-color: #F0F9FF; padding:.5em 1em .5em .2em;
-	text-align: left;cursor:pointer;user-select: none;}
-th .indicator {
-  margin-left: 6px
-}
-
-thead {
-  border-top: 1px solid #fa82f4; border-bottom: 1px solid #96C4EA;border-left: 1px solid #E7F2FB;
-  border-right: 1px solid #E7F2FB;
-}
-
-
 
 #mkdir {
   display:inline-block;
-    float:right;
     padding-top:2px;
     padding-right: 5px;
 }
