--- a/view/index.html
+++ b/view/index.html
@@ -10,7 +10,7 @@
     <div class="csomag">
       <div class="title">
 Bejelentkezés</div>
-<form action="../controller/login.php" method="POST">
+<form action="../controller/controller.php" method="POST">
         <div class="field">
           <input type="text" required id="neptun" name="neptun" placeholder="Neptun kód">
         </div>
