--- a/view/sidebar.html
+++ b/view/sidebar.html
@@ -3,14 +3,77 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <body>
 
 <!-- Sidebar -->
-<div class="w3-sidebar w3-light-grey w3-bar-block">
-  <h3 class="w3-bar-item">Főmenü</h3>
-  <a href="#" class="w3-bar-item w3-button">Rendezés</a>
-  <a href="#" class="w3-bar-item w3-button">Kategória</a>
-  <a href="#" class="w3-bar-item w3-button">Egyéb</a>
+<div style="width:250px; margin-left:10px;" class="w3-sidebar w3-light-grey w3-bar-block" style="width:250px;">
+
+  <input type="text" style="margin-left:5px;margin-top:5px;" placeholder="Search.." name="search">
+      <button type="submit" style="margin-left:5px;margin-top:5px;"><i class="fa fa-search"></i></button>
+  <h3 class="w3-bar-item">Szűrés: <button type="submit">Keresés</i></button><br></h3>
+  <a style="margin-left:5px;"> Fájl Tipus szerint</a>
+  <br>
+  <input type="checkbox" style="height:15px; width:15px; margin-left:50px;"> szövegszerkeztő
+    <span class="checkmark"></span><br>
+
+    <input type="checkbox" style="height:15px; width:15px; margin-left:50px;"> PDF
+    <span class="checkmark"></span><br>
+   
+    <input type="checkbox" style="height:15px; width:15px; margin-left:50px;"> Powerpoint
+    <span class="checkmark"></span><br>
+
+    <input type="checkbox" style="height:15px; width:15px; margin-left:50px;"> táblázatkezelő
+    <span class="checkmark"></span><br>
+
+    <input type="checkbox" style="height:15px; width:15px; margin-left:50px;"> Kép(jpg,png)
+    <span class="checkmark"></span><br>
+
+    <input type="checkbox" style="height:15px; width:15px; margin-left:50px;"> Egyéb
+    <span class="checkmark"></span><br>
+
+    <h3 class="w3-bar-item">Rendezés:</h3>
+
+  <a style="margin-left:5px;"> Módosítás dátuma szerint</a>
+
+  <input type="checkbox" style="height:15px; width:15px; margin-left:50px;"> Növekvő sorrend
+    <span class="checkmark"></span>
+
+    <input type="checkbox" style="height:15px; width:15px; margin-left:50px;"> Csökkenő sorrend
+    <span class="checkmark"></span>
+<br>
+  <a style="margin-left:5px;">Név szerint</a>
+    <br>
+  <input type="checkbox" style="height:15px; width:15px; margin-left:50px;"> Növekvő sorrend
+    <span class="checkmark"></span>
+
+    <input type="checkbox" style="height:15px; width:15px; margin-left:50px;"> Csökkenő sorrend
+    <span class="checkmark"></span><br>
+
+    <a style="margin-left:5px;">ID szerint</a>
+    <br>
+  <input type="checkbox" style="height:15px; width:15px; margin-left:50px;"> Növekvő sorrend
+    <span class="checkmark"></span>
+
+    <input type="checkbox" style="height:15px; width:15px; margin-left:50px;"> Csökkenő sorrend
+    <span class="checkmark"></span><br>
+
+    <a style="margin-left:5px;">Neptun kód szerint</a>
+    <br>
+  <input type="checkbox" style="height:15px; width:15px; margin-left:50px;"> Növekvő sorrend
+    <span class="checkmark"></span>
+
+    <input type="checkbox" style="height:15px; width:15px; margin-left:50px;"> Csökkenő sorrend
+    <span class="checkmark"></span><br>
+
+    <a style="margin-left:5px;">Méret szerint</a>
+    <br>
+  <input type="checkbox" style="height:15px; width:15px; margin-left:50px;"> Növekvő sorrend
+    <span class="checkmark"></span>
+
+    <input type="checkbox" style="height:15px; width:15px; margin-left:50px;"> Csökkenő sorrend
+    <span class="checkmark"></span>
+<br><br><br><br><br>
 </div>
 
       
