--- a/view/sidebar.html
+++ b/view/sidebar.html
@@ -9,7 +9,7 @@
 <!-- Sidebar -->
 <div style="width:250px; margin-left:10px;" class="w3-sidebar w3-light-grey w3-bar-block" style="width:250px;">
 
-  <input type="text" style="margin-left:5px;margin-top:5px;" placeholder="Search.." name="search">
+  <input type="text" style="margin-left:5px;margin-top:5px;" placeholder="Keresés.." name="search">
       <button type="submit" style="margin-left:5px;margin-top:5px;"><i class="fa fa-search"></i></button>
   <h3 class="w3-bar-item">Szűrés: <button type="submit">Keresés</i></button><br></h3>
   <a style="margin-left:5px;"> Fájl Tipus szerint</a>
