--- a/view/sidebar.html
+++ b/view/sidebar.html
@@ -7,7 +7,7 @@
 <body>
 
 <!-- Sidebar -->
-<div style="width:250px; margin-left:10px;" class="w3-sidebar w3-light-grey w3-bar-block" style="width:250px;">
+<div style="width:250px;" class="w3-sidebar w3-light-grey w3-bar-block" style="width:250px;">
 
   <input type="text" style="margin-left:5px;margin-top:5px;" placeholder="Keresés.." name="search">
       <button type="submit" style="margin-left:5px;margin-top:5px;"><i class="fa fa-search"></i></button>
